# rs-datastore

./: Cargo.toml
bench/: datastore.pb.go  go.mod  go.sum  main.go
bench/datastore/: datastore.pb.go  datastore.proto  datastore_grpc.pb.go
benches/: benchmark.rs
src/: client.rs
src/datastore/: event.rs  expiration.rs  mod.rs
src/nestedmap/: options.rs  set.rs
